--- a/js/routes/home/template.html
+++ b/js/routes/home/template.html
@@ -1,2 +1,19 @@
-<h1>{{ section }}</h1>
-<p>This is the home template in action & I'm a view</p>
+<!-- @begin header -->
+<div class="container">
+  <div class="page-header">
+    <h1 class="text-center">{{ section }}<small class="subtitle">From The MovieDB.org</small></h1>
+  </div>
+</div>
+<!-- @end header -->
+<!-- @begin search -->
+<div class="container">
+  <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
+    <div class="input-group search-bar">
+      <input type="text" class="form-control" placeholder="Search for Populars Movies...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+    </div>
+  </div>
+</div>
+<!-- @end search
