--- a/js/routes/top-rated/template.html
+++ b/js/routes/top-rated/template.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div class="input-group search-bar">
-      <input type="text" class="form-control" placeholder="Search for Populars Movies...">
+      <input type="text" class="form-control" placeholder="Search for Top Rated Movies...">
       <span class="input-group-btn">
         <button class="btn btn-default" type="button">Go!</button>
       </span>
@@ -17,6 +17,4 @@
   </div>
 </div>
 <!-- @end search
-
-
 
