--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Movies Catalog</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!--   <link rel="stylesheet" href="https://bootswatch.com/solar/bootstrap.min.css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Monoton|Nothing+You+Could+Do|Raleway+Dots" rel="stylesheet"> 
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -27,7 +29,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#!/popular">Popular <span class="sr-only">(current)</span></a></li>
+            <li><a href="#!/popular">Popular <span class="sr-only"></span></a></li>
             <li><a href="#!/upcoming">Upcoming</a></li>
             <li><a href="#!/now-playing">Now Playing</a></li>
             <li><a href="#!/top-rated">Top Rated</a></li>
@@ -43,11 +45,11 @@
   <ng-view>
   </ng-view>
   <!-- ng-view end -->
-  <footer>
+  <!-- <footer>
     <div class="container">
       <p class="text-center">Ivan Martinez Laborda 2017 &copy</p>
     </div>
-  </footer>
+  </footer> -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>
   <!-- MAIN MODULE -->
