--- a/js/routes/home/template.html
+++ b/js/routes/home/template.html
@@ -1,7 +1,7 @@
 <!-- @begin header -->
 <div class="container">
   <div class="page-header">
-    <h1 class="text-center">{{ section }}<small class="subtitle">From The MovieDB.org</small></h1>
+    <h1 class="text-center">CINEMA<small class="subtitle">From The MovieDB.org</small></h1>
   </div>
 </div>
 <!-- @end header -->
