--- a/js/routes/popular/template.html
+++ b/js/routes/popular/template.html
@@ -16,7 +16,17 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <!--   <ul>
+    <li ng-repeat="movie in populars">{{movie.title}}</li>
+  </ul> -->
+</div>
+<div class="container movie-grid center-block">
+  <div class="thumbnail" ng-repeat="movie in populars">
+    <img class="thumb-img" src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="...">
+    <div class="caption">
+      <h5 class="text-center">{{movie.title}}</h5>
+    </div>
+  </div>
+</div>
 <!-- @end search
-
-
-
