--- a/js/routes/top-rated/template.html
+++ b/js/routes/top-rated/template.html
@@ -16,5 +16,16 @@
     </div>
   </div>
 </div>
+<div class="container">
+
+</div>
+<div class="container movie-grid center-block">
+  <div class="thumbnail" ng-repeat="movie in topRateds">
+    <img class="thumb-img" src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="...">
+    <div class="caption">
+      <h5 class="text-center">{{movie.title}}</h5>
+    </div>
+  </div>
+</div>
 <!-- @end search
 
