--- a/js/routes/home/template.html
+++ b/js/routes/home/template.html
@@ -9,9 +9,9 @@
 <div class="container">
   <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div class="input-group search-bar">
-      <input type="text" class="form-control" placeholder="Search for Populars Movies...">
+      <input type="text" class="form-control" placeholder="Search for a Movie...">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
+        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-play"></span></button>
       </span>
     </div>
   </div>
