--- a/js/routes/popular/template.html
+++ b/js/routes/popular/template.html
@@ -11,7 +11,7 @@
     <div class="input-group search-bar">
       <input type="text" class="form-control" placeholder="Search for Populars Movies...">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
+        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-play"></span></button>
       </span>
     </div>
   </div>
