--- a/js/routes/upcoming/template.html
+++ b/js/routes/upcoming/template.html
@@ -6,12 +6,12 @@
 </div>
 <!-- @end header -->
 <!-- @begin search -->
-<div class="container">
+<div class="container  search-bar">
   <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
-    <div class="input-group search-bar">
+    <div class="input-group">
       <input type="text" class="form-control" placeholder="Search for Upcomings Movies...">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
+        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-play"></span></button>
       </span>
     </div>
   </div>
@@ -20,7 +20,7 @@
 </div>
 <div class="container movie-grid center-block">
   <div class="thumbnail" ng-repeat="movie in upcomings">
-    <img class="thumb-img" src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="...">
+    <img class="thumb-img" src="http://image.tmdb.org/t/p/w185{{movie.poster_path}}" alt="...">
     <div class="caption">
       <h5 class="text-center">{{movie.title}}</h5>
     </div>
