--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
   <ng-view>
   </ng-view>
   <!-- ng-view end -->
-  <!-- <footer>
+  <footer>
     <div class="container">
       <p class="text-center">Ivan Martinez Laborda 2017 &copy</p>
     </div>
-  </footer> -->
+  </footer>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>
   <!-- MAIN MODULE -->
