--- a/js/routes/now-playing/template.html
+++ b/js/routes/now-playing/template.html
@@ -9,17 +9,15 @@
 <div class="container">
   <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div class="input-group search-bar">
-      <input type="text" class="form-control" placeholder="Search for Movies Playing Now...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-play"></span></button>
-      </span>
+      <span class="input-group-addon"><span class="glyphicon glyphicon-play"></span></span>
+      <input type="text" class="form-control" placeholder="Search for Movies Playing Now..." ng-model='searchText' id="searchText">
     </div>
   </div>
 </div>
 <div class="container">
 </div>
 <div class="container movie-grid center-block">
-  <div class="thumbnail" ng-repeat="movie in nowPlaying">
+  <div class="thumbnail" ng-repeat="movie in nowPlaying | filter:searchText">
     <img class="thumb-img" src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="...">
     <div class="caption">
       <h5 class="text-center">{{movie.title}}</h5>
