--- a/js/routes/upcoming/template.html
+++ b/js/routes/upcoming/template.html
@@ -6,20 +6,18 @@
 </div>
 <!-- @end header -->
 <!-- @begin search -->
-<div class="container  search-bar">
+<div class="container">
   <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for Upcomings Movies...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-play"></span></button>
-      </span>
+    <div class="input-group search-bar">
+      <span class="input-group-addon"><span class="glyphicon glyphicon-play"></span></span>
+      <input type="text" class="form-control" placeholder="Search for Upcoming Movies..." ng-model='searchText' id="searchText">
     </div>
   </div>
 </div>
 <div class="container">
 </div>
 <div class="container movie-grid center-block">
-  <div class="thumbnail" ng-repeat="movie in upcomings">
+  <div class="thumbnail" ng-repeat="movie in upcomings  | filter:searchText">
     <img class="thumb-img" src="http://image.tmdb.org/t/p/w185{{movie.poster_path}}" alt="...">
     <div class="caption">
       <h5 class="text-center">{{movie.title}}</h5>
