--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </footer>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-animate.js"></script>
   <!-- MAIN MODULE -->
   <script src="js/app.js"></script>
   <!-- SERVICES -->
