--- a/js/routes/home/template.html
+++ b/js/routes/home/template.html
@@ -9,11 +9,21 @@
 <div class="container">
   <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div class="input-group search-bar">
-      <input type="text" class="form-control" placeholder="Search for a Movie...">
+      <input type="text" class="form-control" placeholder="Search for a Movie..." ng-model="searchText">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-play"></span></button>
+        <button class="btn btn-default" type="button" ng-click="getMovies(MovieService.getMovies())"><span class="glyphicon glyphicon-play"></span></button>
       </span>
     </div>
   </div>
 </div>
-<!-- @end search
+<!-- @end search -->
+<div class="container movie-grid center-block">
+  <div class="thumbnail" ng-repeat="movie in populars | filter:searchText">
+    <img class="thumb-img" ng-src="https://image.tmdb.org/t/p/w185{{movie.poster_path}}" alt="...">
+    <div class="caption">
+      <h5 class="text-center">{{movie.title}}</h5>
+    </div>
+  </div>
+</div>
+
+
