--- a/js/routes/top-rated/template.html
+++ b/js/routes/top-rated/template.html
@@ -29,7 +29,10 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title text-right">{{ movie.title }}</h3>
+            <h3 class="modal-title">{{ movie.title}}</h3>
+            <button type="button" class="btn-modal-close" data-dismiss="modal">
+              <span class="glyphicon glyphicon-remove-sign"></span>
+            </button>
           </div>
           <div class="modal-body">
             <div class="row">
