--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Movies Catalog</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!--   <link rel="stylesheet" href="https://bootswatch.com/solar/bootstrap.min.css"> -->
-  <link href="https://fonts.googleapis.com/css?family=Monoton|Nothing+You+Could+Do|Raleway+Dots" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Bowlby+One|Slackey|Michroma" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Slackey|Michroma" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
